c/examples/writing-a-c-compiler-tests/tests/chapter_9/valid/arguments_in_registers/single_arg.c
int twice(int x){
    return 2 * x;
}

int main(void) {
    return twice(3);
}
