c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_types/extra_credit/compound_assign_function_rhs.c
int x(void);

int main(void) {
    int a = 3;
    a += x;
    return 0;
}